2009-11-04  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        Fix an assert on shutdown when wxWebView has captured the mouse,
        and make sure wxWebView's right click handling is only active when 
        the WebCore popup menu is used.
        
        https://bugs.webkit.org/show_bug.cgi?id=31131

        * WebView.cpp:
        (wxWebView::~wxWebView):
        (wxWebView::OnContextMenuEvents):
        (wxWebView::OnMenuSelectEvents):

2009-11-04  Vadim Zeitlin  <vadim@wxwidgets.org>

        Reviewed by Eric Seidel.

        [wx] Small cleanup: avoid unnecessary wxString::mb_str() calls.

        * WebFrame.cpp:
        (wxWebFrame::SetPageSource):
        (wxWebFrame::LoadURL):

2009-10-30  Evan Stade  <estade@chromium.org>

        Reviewed by David Levin.

        Notify the chrome when the focused node has changed.
        https://bugs.webkit.org/show_bug.cgi?id=30832

        Added stub implementation for new ChromeClient function.

        * WebKitSupport/ChromeClientWx.cpp:
        (WebCore::ChromeClientWx::focusedNodeChanged):
        * WebKitSupport/ChromeClientWx.h:

2009-10-23  Kevin Ollivier  <kevino@theolliviers.com>

        wx build fix. Update the globalObject calls after changes.

        * WebFrame.cpp:
        (wxWebFrame::RunScript):
        * WebKitSupport/FrameLoaderClientWx.cpp:
        (WebCore::FrameLoaderClientWx::windowObjectCleared):

2009-10-21  Pedro Romano  <pmcnr72@gmail.com>

        Reviewed by Kevin Ollivier.

        Include 'WebFrame.h' declared classes in wxPython bindings.
        
        https://bugs.webkit.org/show_bug.cgi?id=30504

        * bindings/python/webview.i:

2009-10-18  Kevin Watters  <kevinwatters@gmail.com>

        Reviewed by Kevin Ollivier.

        Add the ability to specify a proxy for wxWebKit.
        
        https://bugs.webkit.org/show_bug.cgi?id=30446

        * WebView.cpp:
        (curlProxyType):
        (wxWebView::SetProxyInfo):
        * WebView.h:
