@@ -1,3 +1,15 @@
+2009-11-10  Robin Dunn  <robin@alldunn.com>
+
+        Reviewed by Kevin Ollivier.
+
+        Add sanity checks to RunScript to ensure it doesn't run when the document hasn't yet
+        loaded nor when JavaScript is disabled.
+        
+        https://bugs.webkit.org/show_bug.cgi?id=31309
+
+        * WebFrame.cpp:
+        (wxWebFrame::RunScript):
+
 2009-11-04  Kevin Watters  <kevinwatters@gmail.com>
 
         Reviewed by Kevin Ollivier.
